@@ -8,6 +8,7 @@ Dec 28, 2007 - Jim Clark
 - Fixed water calc bug where app was telling user to add salts when they already had the target
    value or higher.
 - Fixed shallow copy of Salt out of database into (partial) deep copy
+- First run at acidification (needs save/load/print and options)
 
 Dec 27, 2007 - Jim Clark
 - Save/load/export added for water profile and salts
